yaml_configs/restic/06-restic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restic
  namespace: restic
spec:
  type: LoadBalancer
  selector:
    app: restic
  ports:
  - name: restic
    port: 9898
    targetPort: 9898
