yaml_configs/restic/07-restic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restic
  namespace: restic
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app: restic
spec:
  rules:
  - host: backup.jsuri.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: restic
            port:
              number: 9898
  tls:
  - hosts:
    - backup.jsuri.com # Change by your domain
    secretName: backup-jsuri-com-tls
